@@ -7,6 +7,7 @@
 	* Updated schema.xml version to "link" it to the 1.5.0 version of the extension
 	* Changed schema.xml access field default value to "c:0"
 	* Added a report status to check whether the used solrconfig.xml is current
+	* Added information about solrconfig.xml and Access Filter Plugin versions to the Solr status report status
 
 2010-09-15  Ingo Renner  <ingo.renner@dkd.de>
 
